<resources>
    <string name="app_name">CompanionTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="retry">Retry</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Log Out</string>

    <string name="contacts">Contacts</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyATmgLpOSf6GH6oCAeBB2ix97oUZA_XOfc</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of birth</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_user_name">UserName already exists. Please choose another</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_matching_password">Passwords did not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalid_credentials">username or password is incorrect</string>
    <string name="error_fetching_details">error loading user profile</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_changed">your email has been successfully changed</string>
    <string name="alert_no_email">Please enter email</string>
    <string name="change_password">Change Password</string>
    <string name="no_connection">No Internet Connection. Please check your Internet connection</string>


    <!--Login-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logged_in_other_device">You maybe logged in on another device.
        Do you wish to logout from other device</string>

    <!--Edit user details-->
    <string name="edit">Edit</string>
    <string name="save">SAVE</string>
    <string name="my_image_cd">My Image</string>
    <string name="remove_image">Remove image</string>
    <string name="edit_my_image_cd">Edit image</string>
    <string name="update_success">Success</string>

    <!--My Connections-->
    <string name="my_connections">My Connections</string>
    <string name="invite_your_friend">invite_your_friend</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="could_not_find">We could not find anyone</string>
    <!--We couldn't find anything for-->

    <string name="facebook_app_id">720072658155694</string>

</resources>
