<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/user_relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <!--User image-->
                <ImageView
                    android:id="@+id/edit_user_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/my_image_cd"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_profile_place_holder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <!--Remove-->
                    <ImageView
                        android:id="@+id/remove_image_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/remove_image"
                        android:padding="@dimen/view_margin"
                        android:src="@drawable/ic_remove"
                        android:visibility="gone" />

                    <!--Edit-->
                    <ImageView
                        android:id="@+id/edit_image_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/edit_my_image_cd"
                        android:padding="10dp"
                        android:src="@drawable/ic_edit_blue" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/first_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/last_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textAppearance="@android:style/TextAppearance.Medium" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/dob_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dob" />

              <TextView
                  android:id="@+id/change_password_textView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/view_margin"
                  android:text="@string/change_password"/>

            </LinearLayout>

            <!--Space at bottom when scrolled-->
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>


